# reactor

./: .gitignore  Cargo.toml  LICENSE  README.md
derives/: Cargo.toml
derives/src/: enum_as.rs  lib.rs  noded.rs
reactor/: Cargo.toml
reactor/src/: app.rs  logger.rs  main.rs  node.rs  settings.rs  tabs.rs  types.rs
reactor/src/node/: item.rs  message.rs  viewer.rs
reactor/src/node/item/: camera.rs  collection.rs  color.rs  material.rs  number.rs  output.rs  primitive.rs  render.rs  scene.rs  string.rs  texture.rs  vector.rs
reactor/src/node/item/material/: checkerboard.rs  dielectric.rs  emissive.rs  lambertian.rs  metal.rs
reactor/src/node/item/primitive/: sphere.rs
reactor/src/node/item/render/: triangle.rs  xrays.rs
reactor/src/node/viewer/: remote.rs  ui.rs  widget.rs
reactor/src/node/viewer/ui/: input.rs  output.rs
reactor/src/node/viewer/widget/: color_picker.rs  fixed_cache.rs
reactor/src/types/: angle.rs  pin.rs  ray.rs
src/: app.rs  main.rs  node.rs  settings.rs  tabs.rs
src/node/: message.rs  output.rs  render.rs  subscribtion.rs  viewer.rs
src/node/render/: triangle.rs
types/: Cargo.toml
types/src/: angle.rs  cast.rs  lib.rs  ray.rs  rect.rs  vector.rs
xrays/: Cargo.toml  build.rs
xrays/shader/: consts.wgsl  main.wgsl  rng.wgsl  sampling.wgsl
xrays/shader/compute/: main.wgsl  object.wgsl  rng.wgsl  types.wgsl
xrays/shader/render/: main.wgsl  tonemap.wgsl
xrays/src/: buffer.rs  camera.rs  lib.rs  sampling.rs  scene.rs  texture.rs  vertex.rs  world.rs
