[workspace]
resolver = "2"
members = [
    "derives",
    "reactor",
    "types",
    "xrays",
]

[workspace.dependencies]
bitflags = "2.9"
bytemuck = { version = "1.22", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize", "bytemuck"] }
reactor-types = { path = "types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
