[package]
name = "xrays"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
hw-skymodel = "0.1"
image = "0.25"
nalgebra = { workspace = true }
reactor-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wgpu = "24.0"

[build-dependencies]
naga = { version = "24.0", features = ["wgsl-out"] }
naga_oil = "0.17"
